# DataAbstraction-objectProcessing

./: README.md  build.gradle  settings.gradle
.github/workflows/: build.yml
config/: gatorgrader.yml
objectprocessor/: .coveragerc  .pylintrc  pyproject.toml
objectprocessor/objectprocessor/: __init__.py  main.py  person.py  process.py
objectprocessor/output/: people.txt
writing/: reflection.md
